# CalculatorUtility

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main  main.cpp
lib/: CMakeLists.txt  library_math.cpp  library_math.h  math.cpp  math.h
